samples/_failures_safe/1761611246_48660f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63de549d.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_63de549d.c:142:9: error: expected expression at end of input
  142 |         for (int j = 0;
      |         ^~~
./samples/SAFE/__tmp_63de549d.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63de549d.c:142:9: error: expected declaration or statement at end of input
